--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,72 +1,64 @@
 body {
-    background-color:#777;
-    margin: auto;
-    width: 960px;
+    background-color:#fff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
     color: #777;
+    height: 100%;
+   
 }
 
 header {
     background-color: #fff;
-    border-color: #ccc;
-    padding: 10px;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    margin: auto;
+    height: 70px;
+    border-bottom-color: gray;
+    border-bottom: 2px;
     color: #777;
     text-align: center;
-    margin: 10px;
+    margin-bottom: 2px;
+    
 }
 
 nav {
-    background-color: #4aaaa5;
-    padding: 10px;
+    background-color: #fff;
+    padding: 25px;
     text-align: center;
-    margin: 10px;
+    margin-right: 150px; 
+    float: right;
+    color: #777;
+   
 }
 
-section {
-    display: block;
-    background-color: #ebebeb;
-    padding: 10px;
-    height: 200px;
-    width: 495px;
-    text-align: center;
-    margin: 10px;
-    float:left;
-}
+a:link, a:visited {
+text-decoration: none;
+color: #777;
 
-article {
-    background-color:#777;
-    padding: 10px;
-    color: #ebebeb;
-}
-
-aside {
-    display: block;
-    background-color: #ebebeb;
-    padding: 10px;
-    height: 200px;
-    width: 385px;
-    text-align: center;
-    margin: 10px;
-    float:left;
 }
 
 footer {
     background-color: #666;
-    padding: 10px;
+    color: white;
+    border-top-color: #4aaaa5;
+    border-top: 5px;
+    height: 70px;
     text-align: center;
-    margin: 10px;
+    clear: both;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+} 
+
+
+.myname h2 {
+    color: white;
+    font-size: 100%;
 }
 
-h2, p {
-    background-color: #ebebeb;
-    color: #777;
-    padding: 10px;
-    margin: 10px;
-}
-
-h2 {
-  font-size: 100%;
+h1 {
+    color: #4aaaa5;
 }
 
 .clearfix::after {
@@ -76,6 +68,66 @@ h2 {
 }
 
 .aboutme {
+    margin:auto;
+    background-color: white;
     width: 960px;
-    height: 700px;
+    height: 400px;
+    padding:40px;
+    margin-top: 40px;
+
+     
 }
+
+
+.aboutme img {
+    vertical-align: middle;
+    float: left;
+    margin-right: 15px;
+}
+
+
+.myname h2 {
+    float: left;
+    background-color: #4aaaa5;
+    padding: 25px;
+    height: 20px;
+    position: relative;
+    margin-left: 150px;
+    border: 0px;
+    color: white;
+
+}
+
+.contact-form {
+    width: 500px;
+    height:300px;
+    margin:auto;
+    background-color: #fff;
+    margin-top: 40px;
+    padding:40px 40px 0px 40px;
+
+}
+
+.container {
+    width: 960px;
+    height:500px;
+    margin:auto;
+    background-color: #fff;
+    margin-top: 40px;
+    padding:40px 40px 0px 40px;  
+
+}
+
+ .container img{
+    margin: 15px;
+    
+ }
+
+ .submitbtn {
+    background-color: #4aaaa5;
+    color: white;
+    padding: 6px 10px;
+ }
+ 
+
+
